--- a/stm32f103_reg_library22_Basic_Timer/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
+++ b/stm32f103_reg_library22_Basic_Timer/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
@@ -27,9 +27,9 @@ Project File Date:  04/29/2025
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'stm32f103zet6'
-compiling myUsartDrive_reg.c...
+compiling main.c...
 linking...
-Program Size: Code=3904 RO-data=336 RW-data=4 ZI-data=3196  
+Program Size: Code=4288 RO-data=336 RW-data=4 ZI-data=7324  
 FromELF: creating hex file...
 "stm32f103zet6\stm32f103zet6.axf" - 0 Error(s), 0 Warning(s).
 
@@ -55,7 +55,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
